fix add_jira_comment tool issue.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #quarkus.log.console.enable=false
 #quarkus.log.console.stderr=false
 quarkus.mcp.server.stdio.enabled=false
+quarkus.banner.enabled=false
