--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.jackson.serialization-inclusion=non_null
 # disable the following console log environment variables for stdio
 #quarkus.log.console.enable=false
 #quarkus.log.console.stderr=false
