--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags: [ 'v*' ]
 
+env:
+  IMAGE_NAME: jira-mcp
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -34,6 +37,13 @@ jobs:
           # Remove 'v' prefix from tag name
           TAG_NAME=${GITHUB_REF#refs/tags/v}
           echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_OUTPUT
+          
+          # Check if tag is standard semantic version (digits and dots only)
+          if [[ $TAG_NAME =~ ^[0-9]+(\.[0-9]+)*$ ]]; then
+            echo "IS_RELEASE=true" >> $GITHUB_OUTPUT
+          else
+            echo "IS_RELEASE=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -41,12 +51,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (with latest tag)
+        if: steps.tag.outputs.IS_RELEASE == 'true'
         uses: docker/build-push-action@v4
         with:
           context: .
           file: src/main/docker/Dockerfile.jvm
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/jira-mcp:${{ steps.tag.outputs.TAG_NAME }}
-            ${{ secrets.DOCKER_USERNAME }}/jira-mcp:latest
+            ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.TAG_NAME }}
+            ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
+      - name: Build and push Docker image (without latest tag)
+        if: steps.tag.outputs.IS_RELEASE == 'false'
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: src/main/docker/Dockerfile.jvm
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.TAG_NAME }}
